2007-09-04  Dominik Vogt  <dominik(dot)vogt(at)gmx(dot)de>

	* fvwm/module_list.h:
	* fvwm/module_list.c:
	a little cleanup

2007-09-01  Dominik Vogt  <dominik(dot)vogt(at)gmx(dot)de>

	* NEWS:
	* configure.ac:
	increased version to 2.5.24

	* NEWS:
	* configure.ac:
	updated for 2.5.23 release

	* libs/Flocale.c (FlocaleEncodeString):
	removed previous warning fix

2007-08-30 Thomas Adam <thomas@edulinux.homeunix.org>

	* fvwm/style.c:
	* fvwm/add_window.c:
	Added new style option:  StartShaded.

2007-08-30  Renato Caldas  <seventhguardian@gmail.com>

	* libs/Flocale.c (FlocaleEncodeString):
	fix compile warning

2007-08-30  Viktor Griph  <griph(at)student(dot)chalmers(dot)se>

	* configure.ac:
	* fvwm/fvwm.1.in
	* fvwm/Makefile.am:
	removed old fvwm manpage

2007-08-29  Renato Caldas  <seventhguardian@gmail.com>

	* NEWS:
	* configure.ac:
	increased version to 2.5.23

	* NEWS:
	* configure.ac:
	fix the date for 2.5.22 release

2007-08-28  Viktor Griph  <griph(at)dd(dot)chalmers(dot)se>

	* fvwm/windowlist.c (CMD_WindowList):
	fixed crash when using CurrentAtEnd and IconifiedAtEnd with only
	iconified windows.

2007-08-28  Dominik Vogt  <dominik(dot)vogt(at)gmx(dot)de>

	* configure.ac:
	fixed perl check
	use "test ! ... = ..." instead of "test ... != ..."

	* fvwm/builtins.c (CMD_PropertyChange):
	fixed completely broken parsing of PropertyChange arguments

2007-08-28  Renato Caldas  <seventhguardian@gmail.com>

	* NEWS:
	* configure.ac:
	updated for 2.5.22 release

	* fvwm/builtins.c (CMD_PropertyChange):
	* libs/Flocale.c (FlocaleGetFftFont):
	(FlocaleGetFontSet):
	(FlocaleGetFont):
	(FlocaleGetFontOrFontSet):
	(FlocaleLoadFont):
	(FlocaleUnloadFont):
	fix compiler warnings

2007-08-23  Dominik Vogt  <dominik(dot)vogt(at)gmx(dot)de>

	* fvwm/functable.c:
	fixed command table parsing

2007-08-21  Dominik Vogt  <dominik(dot)vogt(at)gmx(dot)de>

	* fvwm/module_list.c (module_kill):
	(executeModuleDesperate):
	(module_list_itr_init):
	re-indented
