@@ -800,6 +800,13 @@ int HandlePaging(
 		*delta_y = 0;
 	}
 
+	is_timestamp_valid = False;
+	add_time = 0;
+	if (*delta_x == 0 && *delta_y == 0)
+	{
+		return 0;
+	}
+
 	/* Ouch! lots of bounds checking */
 	if (Scr.Vx + *delta_x < 0)
 	{
@@ -879,13 +886,6 @@ int HandlePaging(
 	if (*yt >= Scr.MyDisplayHeight - edge_thickness)
 	{
 		*yt = Scr.MyDisplayHeight - edge_thickness -1;
-	}
-
-	is_timestamp_valid = False;
-	add_time = 0;
-	if (*delta_x == 0 && *delta_y == 0)
-	{
-		return 0;
 	}
 
 	if (Grab)
